--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,13 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  intl: ^0.20.2
+  logging: ^1.3.0
+  meta: ^1.16.0
   shelf: ^1.4.0
+  shelf_helmet: ^2.3.0
   shelf_router: ^1.1.0
+  stack_trace: ^1.12.1
 
 dev_dependencies:
   http: ^1.1.0
