--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  freezed_annotation: ^3.0.0
   intl: ^0.20.2
+  json_annotation: ^4.9.0
   logging: ^1.3.0
   meta: ^1.16.0
   shelf: ^1.4.0
@@ -16,6 +18,9 @@ dependencies:
   stack_trace: ^1.12.1
 
 dev_dependencies:
+  build_runner: ^2.4.15
+  freezed: ^3.0.6
   http: ^1.1.0
+  json_serializable: ^6.9.5
   lints: ^5.0.0
   test: ^1.24.0
