--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,13 @@ dependencies:
   json_annotation: ^4.9.0
   logging: ^1.3.0
   meta: ^1.16.0
+  pub_semver: ^2.2.0
   shelf: ^1.4.0
+  shelf_gzip: ^4.1.0
   shelf_helmet: ^2.3.0
   shelf_router: ^1.1.0
   stack_trace: ^1.12.1
+  yaml: ^3.1.3
 
 dev_dependencies:
   build_runner: ^2.4.15
