--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,17 +7,22 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  archive: ^4.0.7
   freezed_annotation: ^3.0.0
+  git: ^2.3.1
   intl: ^0.20.2
+  io: ^1.0.5
   json_annotation: ^4.9.0
   logging: ^1.3.0
   meta: ^1.16.0
+  path: ^1.9.1
   pub_semver: ^2.2.0
   shelf: ^1.4.0
   shelf_gzip: ^4.1.0
   shelf_helmet: ^2.3.0
   shelf_router: ^1.1.0
   stack_trace: ^1.12.1
+  xxh3: ^1.2.0
   yaml: ^3.1.3
 
 dev_dependencies:
